--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,3 +3,11 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+:root {
+    --font-space-grotesk: 'Space Grotesk';
+  }
+  
+  body {
+    font-family: var(--font-space-grotesk);
+  }
